--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
 @import "tailwindcss";
-
-:root {
+@theme {
   --color-primary: #030412;
   --color-midnight: #06091f;
   --color-navy: #161a31;
@@ -16,42 +15,40 @@
   --color-sand: #d6995c;
   --color-coral: #ea4884;
   --animate-orbit: orbit 50s linear infinite;
+  @keyframes orbit {
+    0% {
+      transform: rotate(calc(var(--angle) * 1deg))
+        translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
+    }
+    100% {
+      transform: rotate(calc(var(--angle) * 1deg + 360deg))
+        translateY(calc(var(--radius) * 1px))
+        rotate(calc((var(--angle) * -1deg) - 360deg));
+    }
+  }
   --animate-marquee: marquee 50s linear infinite;
   --animate-marquee-vertical: marquee-vertical 50s linear infinite;
-}
 
-@keyframes orbit {
-  0% {
-    transform: rotate(calc(var(--angle) * 1deg))
-      translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
+  @keyframes marquee {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
+    }
   }
-  100% {
-    transform: rotate(calc(var(--angle) * 1deg + 360deg))
-      translateY(calc(var(--radius) * 1px))
-      rotate(calc((var(--angle) * -1deg) - 360deg));
-  }
-}
 
-@keyframes marquee {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(calc(-100% - var(--gap)));
+  @keyframes marquee-vertical {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(calc(-100% - var(--gap)));
+    }
   }
 }
-
-@keyframes marquee-vertical {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(calc(-100% - var(--gap)));
-  }
-}
-
 body {
-  background: var(--color-primary);
+  background: #030412;
   font-family: "Funnel Display", sans-serif;
   color: white;
   scroll-behavior: smooth;
@@ -94,11 +91,9 @@ body {
 .nav-link {
   @apply text-lg md:text-base hover:text-white transition-colors;
 }
-
 /* Button Components */
 .btn {
-  @apply relative px-1 py-4 text-sm text-center rounded-full font-extralight w-[12rem] cursor-pointer overflow-hidden;
-  background-color: var(--color-primary);
+  @apply relative px-1 py-4 text-sm text-center rounded-full font-extralight bg-primary w-[12rem] cursor-pointer overflow-hidden;
 }
 
 /* About Section */
@@ -119,17 +114,14 @@ body {
 }
 
 .grid-default-color {
-  @apply p-6 rounded-2xl;
-  background-image: linear-gradient(to bottom, var(--color-storm), var(--color-indigo));
+  @apply p-6 bg-gradient-to-b from-storm to-indigo rounded-2xl;
 }
 
 .grid-special-color {
-  @apply p-6 rounded-2xl;
-  background-image: linear-gradient(to bottom, var(--color-royal), var(--color-lavender));
+  @apply p-6 bg-gradient-to-b from-royal to-lavender rounded-2xl;
 }
 .grid-black-color {
-  @apply p-6 rounded-2xl;
-  background-image: linear-gradient(to top left, #3A3A3A, #242424, #3A3A3A);
+  @apply p-6 bg-gradient-to-tl from-[#3A3A3A] via-[#242424] to-[#3A3A3A] rounded-2xl;
 }
 
 /* Contact Section*/
@@ -138,10 +130,12 @@ body {
 }
 
 .field-input {
-  @apply w-full min-h-10 rounded-md px-3 py-2 text-sm transition duration-200 placeholder-neutral-500 border border-white/10 mt-2;
-  background-color: rgba(255,255,255,0.1);
+  @apply w-full min-h-10 rounded-md px-3 py-2 text-sm bg-white/10 transition duration-200 placeholder-neutral-500 border border-white/10 mt-2;
 }
 
 .field-input-focus {
   @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/20;
+}
+.canvas-wrapper {
+  position: relative;
 }
